--- a/test-output/index.html
+++ b/test-output/index.html
@@ -2,9 +2,10 @@
 
 <html>
   <head>
+  <meta charset='utf-8'>
   <title>TestNG reports</title>
 
-    <link type="text/css" href="testng-reports.css" rel="stylesheet" />  
+    <link type="text/css" href="testng-reports.css" rel="stylesheet" />
     <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="testng-reports.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -48,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--580038161\testng-customsuite.xml</span>
+                    <span>C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1120884136\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -158,14 +159,14 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--580038161\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1120884136\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Default suite&quot;&gt;
-  &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
+&lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;edmsDesktopBrowser.automation.LoginTestCases&quot;/&gt;
     &lt;/classes&gt;
@@ -209,22 +210,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginInValidPassword')
+data.setCell(0, 1, 'LoginValidCredentials')
 data.setCell(0, 2, 'edmsDesktopBrowser.automation.LoginTestCases')
-data.setCell(0, 3, 7645);
+data.setCell(0, 3, 24044);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LoginInValidUserName')
+data.setCell(1, 1, 'LoginInValidPassword')
 data.setCell(1, 2, 'edmsDesktopBrowser.automation.LoginTestCases')
-data.setCell(1, 3, 159);
+data.setCell(1, 3, 14568);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'LoginValidCredentials')
+data.setCell(2, 1, 'LoginInValidUserName')
 data.setCell(2, 2, 'edmsDesktopBrowser.automation.LoginTestCases')
-data.setCell(2, 3, 102);
+data.setCell(2, 3, 8709);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 47 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,26 +252,42 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">edmsDesktopBrowser.automation.LoginTestCases</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
+              <div class="configuration-method before">
                 <span class="method-name">SetPropertyForWebDriver</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginInValidPassword</span>
-                <span class="method-start">33806 ms</span>
+                <span class="method-start">19813 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">TerminateDriverInstance</span>
+                <span class="method-start">34384 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">SetPropertyForWebDriver</span>
+                <span class="method-start">35976 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginInValidUserName</span>
-                <span class="method-start">41454 ms</span>
+                <span class="method-start">54172 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">TerminateDriverInstance</span>
+                <span class="method-start">62882 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">SetPropertyForWebDriver</span>
+                <span class="method-start">64637 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginValidCredentials</span>
-                <span class="method-start">41618 ms</span>
+                <span class="method-start">81824 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-test after">
+              <div class="configuration-method after">
                 <span class="method-name">TerminateDriverInstance</span>
-                <span class="method-start">41725 ms</span>
-              </div> <!-- configuration-test after -->
+                <span class="method-start">105869 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
