--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">109,367</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">55,724</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">edmsDesktopBrowser.automation.LoginTestCases</td><td><a href="#m0">LoginInValidPassword</a></td><td rowspan="1">1569857301122</td><td rowspan="1">14568</td></tr><tr class="passedeven"><td><a href="#m1">LoginInValidUserName</a></td><td rowspan="1">1569857335481</td><td rowspan="1">8709</td></tr><tr class="passedeven"><td><a href="#m2">LoginValidCredentials</a></td><td rowspan="1">1569857363133</td><td rowspan="1">24044</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">edmsDesktopBrowser.automation.LoginTestCases</td><td><a href="#m0">LoginValidCredentials</a></td><td rowspan="1">1570039247219</td><td rowspan="1">24432</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">edmsDesktopBrowser.automation.LoginTestCases#LoginInValidPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">edmsDesktopBrowser.automation.LoginTestCases#LoginInValidUserName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">edmsDesktopBrowser.automation.LoginTestCases#LoginValidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">edmsDesktopBrowser.automation.LoginTestCases#LoginValidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
