--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1120884136\testng-customsuite.xml</span>
+                    <span>C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1049548813\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,16 +100,6 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="edmsDesktopBrowser.automation.LoginTestCases" class="method navigator-link" hash-for-method="LoginInValidPassword">LoginInValidPassword</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="edmsDesktopBrowser.automation.LoginTestCases" class="method navigator-link" hash-for-method="LoginInValidUserName">LoginInValidUserName</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="edmsDesktopBrowser.automation.LoginTestCases" class="method navigator-link" hash-for-method="LoginValidCredentials">LoginValidCredentials</a> <!-- method navigator-link -->
@@ -135,23 +125,11 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginInValidPassword">
-                  </a> <!-- LoginInValidPassword -->
-                  <span class="method-name">LoginInValidPassword</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="LoginInValidUserName">
-                  </a> <!-- LoginInValidUserName -->
-                  <span class="method-name">LoginInValidUserName</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="LoginValidCredentials">
                   </a> <!-- LoginValidCredentials -->
                   <span class="method-name">LoginValidCredentials</span>
+                  <em>
+(Login with valid Username and password)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1120884136\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1049548813\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -208,24 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'LoginValidCredentials')
 data.setCell(0, 2, 'edmsDesktopBrowser.automation.LoginTestCases')
-data.setCell(0, 3, 24044);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LoginInValidPassword')
-data.setCell(1, 2, 'edmsDesktopBrowser.automation.LoginTestCases')
-data.setCell(1, 3, 14568);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'LoginInValidUserName')
-data.setCell(2, 2, 'edmsDesktopBrowser.automation.LoginTestCases')
-data.setCell(2, 3, 8709);
+data.setCell(0, 3, 24432);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 47 seconds</span>
+              <span class="suite-total-time">Total running time: 24 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -257,36 +227,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginInValidPassword</span>
-                <span class="method-start">19813 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">TerminateDriverInstance</span>
-                <span class="method-start">34384 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">SetPropertyForWebDriver</span>
-                <span class="method-start">35976 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">LoginInValidUserName</span>
-                <span class="method-start">54172 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">TerminateDriverInstance</span>
-                <span class="method-start">62882 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">SetPropertyForWebDriver</span>
-                <span class="method-start">64637 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
                 <span class="method-name">LoginValidCredentials</span>
-                <span class="method-start">81824 ms</span>
+                <span class="method-start">27892 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">TerminateDriverInstance</span>
-                <span class="method-start">105869 ms</span>
+                <span class="method-start">52327 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
