--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="adf1b2">  <td>19/09/30 20:58:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCases.LoginInValidPassword()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@6ce139a4]">LoginInValidPassword</td> 
-  <td>main@1923598304</td>   <td></td> </tr>
-<tr bgcolor="adf1b2">  <td>19/09/30 20:58:55</td>   <td>34359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCases.LoginInValidUserName()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@6ce139a4]">LoginInValidUserName</td> 
-  <td>main@1923598304</td>   <td></td> </tr>
-<tr bgcolor="adf1b2">  <td>19/09/30 20:59:23</td>   <td>62011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCases.LoginValidCredentials()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@6ce139a4]">LoginValidCredentials</td> 
-  <td>main@1923598304</td>   <td></td> </tr>
-<tr bgcolor="adf1b2">  <td>19/09/30 20:58:01</td>   <td>-19812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTestCases.SetPropertyForWebDriver()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@6ce139a4]">&gt;&gt;SetPropertyForWebDriver</td> 
-<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
-<tr bgcolor="adf1b2">  <td>19/09/30 20:58:37</td>   <td>16163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTestCases.SetPropertyForWebDriver()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@6ce139a4]">&gt;&gt;SetPropertyForWebDriver</td> 
-<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
-<tr bgcolor="adf1b2">  <td>19/09/30 20:59:05</td>   <td>44824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTestCases.SetPropertyForWebDriver()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@6ce139a4]">&gt;&gt;SetPropertyForWebDriver</td> 
-<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
-<tr bgcolor="adf1b2">  <td>19/09/30 20:58:35</td>   <td>14571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTestCases.TerminateDriverInstance()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@6ce139a4]">&lt;&lt;TerminateDriverInstance</td> 
-<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
-<tr bgcolor="adf1b2">  <td>19/09/30 20:59:04</td>   <td>43069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTestCases.TerminateDriverInstance()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@6ce139a4]">&lt;&lt;TerminateDriverInstance</td> 
-<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
-<tr bgcolor="adf1b2">  <td>19/09/30 20:59:47</td>   <td>86057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTestCases.TerminateDriverInstance()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@6ce139a4]">&lt;&lt;TerminateDriverInstance</td> 
-<td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/02 23:30:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCases.LoginValidCredentials()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@7a4ccb53]">LoginValidCredentials</td> 
+  <td>main@1516500233</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/02 23:30:19</td>   <td>-27890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTestCases.SetPropertyForWebDriver()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@7a4ccb53]">&gt;&gt;SetPropertyForWebDriver</td> 
+<td>&nbsp;</td>  <td>main@1516500233</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/02 23:31:11</td>   <td>24435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTestCases.TerminateDriverInstance()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@7a4ccb53]">&lt;&lt;TerminateDriverInstance</td> 
+<td>&nbsp;</td>  <td>main@1516500233</td>   <td></td> </tr>
 </table>
