--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1049548813\testng-customsuite.xml</span>
+                    <span>C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1305953692\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="edmsDesktopBrowser.automation.LoginTestCases" class="method navigator-link" hash-for-method="LoginValidCredentials">LoginValidCredentials</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="TestCaseDesktopBrowser.automation.SearchTestCases" class="method navigator-link" hash-for-method="SearchCustomerAccountNumber">SearchCustomerAccountNumber</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,16 +120,16 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">edmsDesktopBrowser.automation.LoginTestCases</span>
+              <span class="class-name">TestCaseDesktopBrowser.automation.SearchTestCases</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginValidCredentials">
-                  </a> <!-- LoginValidCredentials -->
-                  <span class="method-name">LoginValidCredentials</span>
+                  <a name="SearchCustomerAccountNumber">
+                  </a> <!-- SearchCustomerAccountNumber -->
+                  <span class="method-name">SearchCustomerAccountNumber</span>
                   <em>
-(Login with valid Username and password)                  </em>
+(TC009: Search Customer by Account Number)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1049548813\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1305953692\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;edmsDesktopBrowser.automation.LoginTestCases&quot;/&gt;
+      &lt;class name=&quot;TestCaseDesktopBrowser.automation.SearchTestCases&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginValidCredentials')
-data.setCell(0, 2, 'edmsDesktopBrowser.automation.LoginTestCases')
-data.setCell(0, 3, 24432);
+data.setCell(0, 1, 'SearchCustomerAccountNumber')
+data.setCell(0, 2, 'TestCaseDesktopBrowser.automation.SearchTestCases')
+data.setCell(0, 3, 32);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 32 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,19 +221,27 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">edmsDesktopBrowser.automation.LoginTestCases</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">SetPropertyForWebDriver</span>
+              <div class="chronological-class-name">TestCaseDesktopBrowser.automation.SearchTestCases</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">DataSetup</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="configuration-method before">
+                <span class="method-name">SetPropertyForWebDriver([TestResult name=SearchCustomerAccountNumber status=SUCCESS method=SearchTestCases.SearchCustomerAcc...)</span>
+                <span class="method-start">1402 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginValidCredentials</span>
-                <span class="method-start">27892 ms</span>
+                <span class="method-name">SearchCustomerAccountNumber</span>
+                <span class="method-start">533504 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">TerminateDriverInstance</span>
-                <span class="method-start">52327 ms</span>
+                <span class="method-start">533562 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="configuration-class after">
+                <span class="method-name">DataCleanUp</span>
+                <span class="method-start">533564 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
