--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5a39b">  <td>19/10/02 23:30:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTestCases.SetPropertyForWebDriver()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@7a4ccb53]">&gt;&gt;SetPropertyForWebDriver</td> 
-<td>&nbsp;</td>  <td>main@1516500233</td>   <td></td> </tr>
-<tr bgcolor="a5a39b">  <td>19/10/02 23:30:47</td>   <td>27890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCases.LoginValidCredentials()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@7a4ccb53]">LoginValidCredentials</td> 
-  <td>main@1516500233</td>   <td></td> </tr>
-<tr bgcolor="a5a39b">  <td>19/10/02 23:31:11</td>   <td>52325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTestCases.TerminateDriverInstance()[pri:0, instance:edmsDesktopBrowser.automation.LoginTestCases@7a4ccb53]">&lt;&lt;TerminateDriverInstance</td> 
-<td>&nbsp;</td>  <td>main@1516500233</td>   <td></td> </tr>
+<tr bgcolor="67b0b6">  <td>19/10/11 12:25:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.DataSetup()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@649bec2e]">&gt;&gt;DataSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@224100622</td>   <td></td> </tr>
+<tr bgcolor="67b0b6">  <td>19/10/11 12:25:37</td>   <td>1393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.SetPropertyForWebDriver(org.testng.ITestResult)[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@649bec2e]">&gt;&gt;SetPropertyForWebDriver</td> 
+<td>&nbsp;</td>  <td>main@224100622</td>   <td></td> </tr>
+<tr bgcolor="67b0b6">  <td>19/10/11 12:34:29</td>   <td>533490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTestCases.SearchCustomerAccountNumber()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@649bec2e]">SearchCustomerAccountNumber</td> 
+  <td>main@224100622</td>   <td></td> </tr>
+<tr bgcolor="67b0b6">  <td>19/10/11 12:34:29</td>   <td>533549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.TerminateDriverInstance()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@649bec2e]">&lt;&lt;TerminateDriverInstance</td> 
+<td>&nbsp;</td>  <td>main@224100622</td>   <td></td> </tr>
+<tr bgcolor="67b0b6">  <td>19/10/11 12:34:29</td>   <td>533551</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.DataCleanUp()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@649bec2e]">&lt;&lt;DataCleanUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@224100622</td>   <td></td> </tr>
 </table>
