--Folder Structure Updated

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,6 +11,18 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>SearchCustomerBusinessEntityID</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>SearchCustomerPartyID</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>SearchCustomerAccountName</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>SearchCustomerAccountNumber</td>
 <td>&nbsp;</td></tr>
 <tr>
