--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67b0b6">  <td>19/10/11 12:25:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.DataSetup()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@649bec2e]">&gt;&gt;DataSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@224100622</td>   <td></td> </tr>
-<tr bgcolor="67b0b6">  <td>19/10/11 12:25:37</td>   <td>1393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.SetPropertyForWebDriver(org.testng.ITestResult)[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@649bec2e]">&gt;&gt;SetPropertyForWebDriver</td> 
-<td>&nbsp;</td>  <td>main@224100622</td>   <td></td> </tr>
-<tr bgcolor="67b0b6">  <td>19/10/11 12:34:29</td>   <td>533490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTestCases.SearchCustomerAccountNumber()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@649bec2e]">SearchCustomerAccountNumber</td> 
-  <td>main@224100622</td>   <td></td> </tr>
-<tr bgcolor="67b0b6">  <td>19/10/11 12:34:29</td>   <td>533549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.TerminateDriverInstance()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@649bec2e]">&lt;&lt;TerminateDriverInstance</td> 
-<td>&nbsp;</td>  <td>main@224100622</td>   <td></td> </tr>
-<tr bgcolor="67b0b6">  <td>19/10/11 12:34:29</td>   <td>533551</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.DataCleanUp()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@649bec2e]">&lt;&lt;DataCleanUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@224100622</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:43:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.DataSetup()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&gt;&gt;DataSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:43:15</td>   <td>1053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.SetPropertyForWebDriver(org.testng.ITestResult)[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&gt;&gt;SetPropertyForWebDriver</td> 
+<td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:43:38</td>   <td>23760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTestCases.SearchCustomerAccountName()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">SearchCustomerAccountName</td> 
+  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:44:34</td>   <td>80188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.TerminateDriverInstance()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&lt;&lt;TerminateDriverInstance</td> 
+<td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:44:38</td>   <td>83542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.SetPropertyForWebDriver(org.testng.ITestResult)[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&gt;&gt;SetPropertyForWebDriver</td> 
+<td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:45:02</td>   <td>107840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTestCases.SearchCustomerAccountNumber()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">SearchCustomerAccountNumber</td> 
+  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:45:51</td>   <td>157219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.TerminateDriverInstance()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&lt;&lt;TerminateDriverInstance</td> 
+<td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:45:55</td>   <td>160470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.SetPropertyForWebDriver(org.testng.ITestResult)[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&gt;&gt;SetPropertyForWebDriver</td> 
+<td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:46:19</td>   <td>184501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTestCases.SearchCustomerBusinessEntityID()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">SearchCustomerBusinessEntityID</td> 
+  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:47:16</td>   <td>242008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.TerminateDriverInstance()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&lt;&lt;TerminateDriverInstance</td> 
+<td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:47:20</td>   <td>245392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.SetPropertyForWebDriver(org.testng.ITestResult)[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&gt;&gt;SetPropertyForWebDriver</td> 
+<td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:47:37</td>   <td>262436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTestCases.SearchCustomerPartyID()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">SearchCustomerPartyID</td> 
+  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:48:15</td>   <td>300647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.TerminateDriverInstance()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&lt;&lt;TerminateDriverInstance</td> 
+<td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a5a39b">  <td>19/10/14 14:48:18</td>   <td>303896</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.DataCleanUp()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&lt;&lt;DataCleanUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
 </table>
