--- a/test-output/index.html
+++ b/test-output/index.html
@@ -37,8 +37,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-passed">Default suite</span>
+            <a href="#" panel-name="suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="navigator-link">
+              <span class="suite-name border-passed">Failed suite [Failed suite [Failed suite [Default suite]]]</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1305953692\testng-customsuite.xml</span>
+                  <a href="#" panel-name="test-xml-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="navigator-link ">
+                    <span>C:\Users\akmukhop\Documents\MobileAutomationTesting\com.uiTestAutomationEDMS_v1.9.application\test-output\testng-failed.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="testlist-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="group-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="times-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="reporter-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Default_suite" class="navigator-link ">
+                  <a href="#" panel-name="chronological-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -96,16 +96,16 @@
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="hide-methods passed suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]"> (hide)</a> <!-- hide-methods passed suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]] -->
+                      <a href="#" panel-name="suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="show-methods passed suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]"> (show)</a> <!-- show-methods passed suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]] -->
                     </span>
-                    <div class="method-list-content passed suite-Default_suite">
+                    <div class="method-list-content passed suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestCaseDesktopBrowser.automation.SearchTestCases" class="method navigator-link" hash-for-method="SearchCustomerAccountNumber">SearchCustomerAccountNumber</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" title="TestCaseDesktopBrowser.automation.SearchTestCases" class="method navigator-link" hash-for-method="SearchCustomerBusinessEntityID">SearchCustomerBusinessEntityID</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
+                    </div> <!-- method-list-content passed suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]] -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -116,8 +116,8 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
+        <div panel-name="suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="panel Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]">
+          <div class="suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">TestCaseDesktopBrowser.automation.SearchTestCases</span>
@@ -125,62 +125,70 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="SearchCustomerAccountNumber">
-                  </a> <!-- SearchCustomerAccountNumber -->
-                  <span class="method-name">SearchCustomerAccountNumber</span>
+                  <a name="SearchCustomerBusinessEntityID">
+                  </a> <!-- SearchCustomerBusinessEntityID -->
+                  <span class="method-name">SearchCustomerBusinessEntityID</span>
                   <em>
-(TC009: Search Customer by Account Number)                  </em>
+(TC010: Search Customer by Business Entity ID (BE ID))                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
-        </div> <!-- panel Default_suite -->
-        <div panel-name="test-xml-Default_suite" class="panel">
+          </div> <!-- suite-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]-class-passed -->
+        </div> <!-- panel Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]] -->
+        <div panel-name="test-xml-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\akmukhop\AppData\Local\Temp\testng-eclipse--1305953692\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\akmukhop\Documents\MobileAutomationTesting\com.uiTestAutomationEDMS_v1.9.application\test-output\testng-failed.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
+&lt;suite name=&quot;Failed suite [Failed suite [Failed suite [Default suite]]]&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Default test(failed)(failed)(failed)&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestCaseDesktopBrowser.automation.SearchTestCases&quot;/&gt;
+      &lt;class name=&quot;TestCaseDesktopBrowser.automation.SearchTestCases&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;DataSetup&quot;/&gt;
+          &lt;include name=&quot;TerminateDriverInstance&quot;/&gt;
+          &lt;include name=&quot;DataCleanUp&quot;/&gt;
+          &lt;include name=&quot;SearchCustomerBusinessEntityID&quot;/&gt;
+          &lt;include name=&quot;SetPropertyForWebDriver&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- TestCaseDesktopBrowser.automation.SearchTestCases --&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Default test --&gt;
-&lt;/suite&gt; &lt;!-- Default suite --&gt;
+  &lt;/test&gt; &lt;!-- Default test(failed)(failed)(failed) --&gt;
+&lt;/suite&gt; &lt;!-- Failed suite [Failed suite [Failed suite [Default suite]]] --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Default_suite" class="panel">
+        <div panel-name="testlist-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Default suite</span>
+            <span class="header-content">Tests for Failed suite [Failed suite [Failed suite [Default suite]]]</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (1 class)</span>
+                <span class="test-name">Default test(failed)(failed)(failed) (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Default_suite" class="panel">
+        <div panel-name="group-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Default suite</span>
+            <span class="header-content">Groups for Failed suite [Failed suite [Failed suite [Default suite]]]</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Default_suite" class="panel">
+        <div panel-name="times-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Default suite</span>
+            <span class="header-content">Times for Failed suite [Failed suite [Failed suite [Default suite]]]</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Default_suite');
-function tableData_Default_suite() {
+suiteTableInitFunctions.push('tableData_Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]');
+function tableData_Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
@@ -188,34 +196,45 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'SearchCustomerAccountNumber')
+data.setCell(0, 1, 'SearchCustomerBusinessEntityID')
 data.setCell(0, 2, 'TestCaseDesktopBrowser.automation.SearchTestCases')
-data.setCell(0, 3, 32);
-window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
+data.setCell(0, 3, 46223);
+window.suiteTableData['Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]']= { tableData: data, tableDiv: 'times-div-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 32 ms</span>
-              <div id="times-div-Default_suite">
-              </div> <!-- times-div-Default_suite -->
+              <span class="suite-total-time">Total running time: 46 seconds</span>
+              <div id="times-div-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]">
+              </div> <!-- times-div-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]] -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Default_suite" class="panel">
+        <div panel-name="reporter-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Default suite</span>
+            <span class="header-content">Reporter output for Failed suite [Failed suite [Failed suite [Default suite]]]</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Default_suite" class="panel">
+        <div panel-name="ignored-methods-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">TestCaseDesktopBrowser.automation.SearchTestCases</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">SearchCustomerAccountNumber</span>
+                <br/>
+                <span class="ignored-method-name">SearchCustomerAccountName</span>
+                <br/>
+                <span class="ignored-method-name">SearchCustomerPartyID</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Default_suite" class="panel">
+        <div panel-name="chronological-Failed_suite_[Failed_suite_[Failed_suite_[Default_suite]]]" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -227,20 +246,20 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
-                <span class="method-name">SetPropertyForWebDriver([TestResult name=SearchCustomerAccountNumber status=SUCCESS method=SearchTestCases.SearchCustomerAcc...)</span>
-                <span class="method-start">1402 ms</span>
+                <span class="method-name">SetPropertyForWebDriver([TestResult name=SearchCustomerBusinessEntityID status=SUCCESS method=SearchTestCases.SearchCustomer...)</span>
+                <span class="method-start">821 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">SearchCustomerAccountNumber</span>
-                <span class="method-start">533504 ms</span>
+                <span class="method-name">SearchCustomerBusinessEntityID</span>
+                <span class="method-start">21812 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">TerminateDriverInstance</span>
-                <span class="method-start">533562 ms</span>
+                <span class="method-start">68037 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">DataCleanUp</span>
-                <span class="method-start">533564 ms</span>
+                <span class="method-start">71255 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
