--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5a39b">  <td>19/10/14 22:17:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.DataCleanUp()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&lt;&lt;DataCleanUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
-<tr bgcolor="a5a39b">  <td>19/10/14 22:17:03</td>   <td>-32893</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.DataSetup()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&gt;&gt;DataSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
-<tr bgcolor="a5a39b">  <td>19/10/14 22:17:34</td>   <td>-2154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTestCases.SearchCustomerAccountNumber()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">SearchCustomerAccountNumber</td> 
-  <td>main@178049969</td>   <td></td> </tr>
-<tr bgcolor="a5a39b">  <td>19/10/14 22:17:04</td>   <td>-32065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.SetPropertyForWebDriver(org.testng.ITestResult)[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&gt;&gt;SetPropertyForWebDriver</td> 
-<td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
-<tr bgcolor="a5a39b">  <td>19/10/14 22:17:35</td>   <td>-1692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.TearDown()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@6b26e945]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="ab799c">  <td>19/11/07 16:52:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.DataCleanUp()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@35d019a3]">&lt;&lt;DataCleanUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@686989583</td>   <td></td> </tr>
+<tr bgcolor="ab799c">  <td>19/11/07 16:51:30</td>   <td>-70403</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.DataSetup()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@35d019a3]">&gt;&gt;DataSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@686989583</td>   <td></td> </tr>
+<tr bgcolor="ab799c">  <td>19/11/07 16:52:04</td>   <td>-37058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTestCases.SearchCustomerBeGeoID()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@35d019a3]">SearchCustomerBeGeoID</td> 
+  <td>main@686989583</td>   <td></td> </tr>
+<tr bgcolor="ab799c">  <td>19/11/07 16:51:38</td>   <td>-62878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchTestCases.SetPropertyForWebDriver(org.testng.ITestResult)[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@35d019a3]">&gt;&gt;SetPropertyForWebDriver</td> 
+<td>&nbsp;</td>  <td>main@686989583</td>   <td></td> </tr>
+<tr bgcolor="ab799c">  <td>19/11/07 16:52:37</td>   <td>-3990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchTestCases.TearDown()[pri:0, instance:TestCaseDesktopBrowser.automation.SearchTestCases@35d019a3]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@686989583</td>   <td></td> </tr>
 </table>
